--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,15 @@
     font-size: 16px;
     background-color: #dde1e2; 
     width: 100%;
+
+    /* sin refresh */
+    overscroll-behavior-y: contain;
+    
+    /* para ios de la sig pagina */
+    /* https://medium.com/appscope/designing-native-like-progressive-web-apps-for-ios-1b3cdda1d0e8 */
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
 }
 
 /* Personalizados */
